Added When for Includes, and Nested Includes

--- a/henchman/test/tasksNoIncludes.yaml
+++ b/henchman/test/tasksNoIncludes.yaml
@@ -3,5 +3,6 @@ name: "Tasks No Includes"
 tasks:
   - name: "included_task1"
     action: bar=baz
+    when: jolly == santa
   - name: "included_task2"
     action: foo=bar
