changed preprocess_test.go to asserts.  changed tests files structure

--- a/henchman/test/plan/includeAtTaskLevel.yaml
+++ b/henchman/test/plan/includeAtTaskLevel.yaml
@@ -6,4 +6,4 @@ hosts:
 tasks:
   - name: task1
     action: cmd="ls -al"
-  - include: test/tasksNoIncludes.yaml
+  - include: test/tasks/noInclude.yaml
