--- a/henchman/test/tasks/withIncludeAndVars.yaml
+++ b/henchman/test/tasks/withIncludeAndVars.yaml
@@ -3,7 +3,7 @@ name: "To be include"
 tasks:
     - name: "included_task1"
       action: foo="bar"
-    - include: test/tasksNoIncludes.yaml 
+    - include: test/tasks/noInclude.yaml 
       vars:
         foo: thumb
     - name: "included_task2"
