Added custom unmarshal for VarsProxy, check the NOTE.  Also changed TaskVars to VarsMap

--- a/henchman/test/plan/invalidDoubleIncludeAtVarsLevel.yaml
+++ b/henchman/test/plan/invalidDoubleIncludeAtVarsLevel.yaml
@@ -3,8 +3,10 @@ name: "Sample plan"
 vars:
   hello: world
   foo: scar
-  include: test/vars/vars.yaml
-  include: test/vars/vars2.yaml
+  include:
+    - test/vars/vars.yaml
+  include:
+    - test/vars/vars2.yaml
   spam: eggs
 tasks:
   - name: Sample task that does nothing
