--- a/henchman/test/plan/planWithPongo2.yaml
+++ b/henchman/test/plan/planWithPongo2.yaml
@@ -4,6 +4,6 @@ vars:
   service: iptables
   key: abcd1234
 tasks:
-  - name: "{{ vars.service }} at {{ machine.Hostname }}"
+  - name: "{{ vars.service }} with {{ vars.key }}"
     shell: cmd=echo key="{{ vars.service }}"
     local: true
