Changed Task.Render to one function which handles rendering of each task.  Created ProcessWhen to handle the rendering of when statement in Task.  Added a RegisterMap for each task in plan.go.  Placed Task.Render in plan.go.  Task.Run will only execute tasks now

--- a/henchman/test/plan/planWithPongo2.yaml
+++ b/henchman/test/plan/planWithPongo2.yaml
@@ -7,3 +7,6 @@ tasks:
   - name: "{{ vars.service }} with {{ vars.key }}"
     shell: cmd=echo key="{{ vars.service }}"
     local: true
+  - name: "{{ name }} is valid"
+    shell: cmd="{{ cmd }}" key=tmpKey
+    when: vars.service == "iptables"
