#7 added error checking tests for ProcessWhen() and having {{ or }} in when param

--- a/henchman/test/plan/planWithPongo2.yaml
+++ b/henchman/test/plan/planWithPongo2.yaml
@@ -3,6 +3,8 @@ name: "Plan with Pongo 2"
 vars:
   service: iptables
   key: abcd1234
+  test: tmp_val
+  flag: false
 tasks:
   - name: "{{ vars.service }} with {{ vars.key }}"
     shell: cmd=echo key="{{ vars.service }}"
@@ -10,3 +12,11 @@ tasks:
   - name: "{{ name }} is valid"
     shell: cmd="{{ cmd }}" key=tmpKey
     when: vars.service == "iptables"
+  - include: test/tasks/withPongo2.yaml
+    when: vars.key == "abcd1234"
+  - name: "When processing test"
+    shell: cmd=ls
+    when: vars.test
+  - name: "Vars flag test"
+    shell: cmd=ls
+    when: vars.flag
