--- a/henchman/test/plan/registersAndWhen.yaml
+++ b/henchman/test/plan/registersAndWhen.yaml
@@ -1,13 +1,22 @@
 ---
 name: "Plan with Registers and When"
 hosts:
-   - test 
+   - individual 
 tasks:
    - name: "Task 1"
-     shell: cmd="echo hello" 
+     shell: cmd="echo hello {{ vars.current_host }}" loglevel="debug"
      local: true
      register: first
    - name: "Task 2"
-     shell: cmd="echo goodbye"
+     shell: cmd="echo goodbye world" loglevel="debug"
      local: true
      register: second
+   - name: "Task 3"
+     shell: cmd="echo success" loglevel="debug"
+     local: true
+     when: second.State == "changed"
+#   - include: "henchman/test/tasks/modulesTest.yaml"
+#     when: second.State == "changed"
+   - name: "Task 4"
+     shell: cmd="ls" loglevel="debug"
+     local: true
