--- a/henchman/test/inventory/testInventory.yaml
+++ b/henchman/test/inventory/testInventory.yaml
@@ -1,5 +1,8 @@
-test:
-  - 192.168.33.10
-  - 192.168.33.11
-individual:
-  - 192.168.33.10
+groups:
+  test:
+    hosts:
+      - 192.168.33.10
+      - 192.168.33.11
+  individual:
+    hosts:
+      - 192.168.33.10
