--- a/henchman/test/inventory/testInventory.yaml
+++ b/henchman/test/inventory/testInventory.yaml
@@ -11,3 +11,9 @@ groups:
   individual:
     hosts:
       - 192.168.33.10
+  second:
+    hosts:
+      - 192.168.33.11
+  third:
+    hosts:
+      - 192.168.33.12
