--- a/circle.yml
+++ b/circle.yml
@@ -8,17 +8,15 @@ dependencies:
   override:
     - mkdir -p "$GOPATH/src/$IMPORT_PATH"
     - rsync -azC --delete ./ "$GOPATH/src/$IMPORT_PATH/"
-    - godep restore ./...
 
 test:
   pre:
     # Getting import errors in circleci
     - go get github.com/apigee/henchman/henchman
-    - go vet -x ./...
+    - godep go vet -x ./...
   override:
-    - godep restore
-    - go test -v ./...
-    - go test ./henchman -covermode=count -coverprofile=coverage.out -coverpkg=./...
+    - godep go test -v ./...
+    - godep go test ./henchman -covermode=count -coverprofile=coverage.out -coverpkg=./...
   post:
     - sh ./package.sh
 
