#74, #77 resolves and tars all modules from all paths.  Transfers modules to every machine and to local

--- a/henchman/test/plan/curlTest.yaml
+++ b/henchman/test/plan/curlTest.yaml
@@ -13,3 +13,5 @@ tasks:
   - name: "Test Curl"
     curl: url="http://httpbin.org/ip" http="GET"
     register: first
+  - name: "Test Shell"
+    shell: cmd="echo hello"
