#75 implemented debug flag for tasks and at a plan level.  Need to add more tests to preprocessor_test.go and fix existing modules

--- a/henchman/test/fail.yaml
+++ b/henchman/test/fail.yaml
@@ -2,5 +2,5 @@
 name: "Fail plan"
 tasks:
   - name: "Bad task"
-    shell: okay=wut
-    mod: wut=mutt
+    shell: cmd="echo <10nc2290><*) blloper"
+    debug: true
