--- a/henchman/test/plan/curlTest.yaml
+++ b/henchman/test/plan/curlTest.yaml
@@ -7,9 +7,11 @@ tasks:
   - name: "Test xml Curl"
     curl: url="http://ci.apigeng.com/v1/data/1k.xml" http="GET" loglevel=debug
     register: second
+    debug: true
   - name: "Test json Curl"
     curl: url="http://ci.apigeng.com/v1/data/1k.json" http="GET" 
     register: third
+    debug: true
   - name: "Test Curl"
     curl: url="http://httpbin.org/ip" http="GET"
     register: first
