#76 almost finished this.  Just need to do ssh.go.  PLEASE read the README and follow the formatting for HenchErrs.

--- a/henchman/test/plan/invalid/invalidPongo2AtWhen.yaml
+++ b/henchman/test/plan/invalid/invalidPongo2AtWhen.yaml
@@ -8,4 +8,5 @@ tasks:
      when: vars.service == "iptables"
    - name: "Task 2"
      shell: cmd=touch
-     when: {{ vars.service }} == "iptables" 
+     when: '"{{ vars.service }}" == "iptables"'
+
