--- a/henchman/test/inventory/testInventory.yaml
+++ b/henchman/test/inventory/testInventory.yaml
@@ -8,6 +8,8 @@ groups:
     hosts:
       - 192.168.33.10
       - 192.168.33.11
+    vars:
+      testVar: hello
   individual:
     hosts:
       - 192.168.33.10
