fixed test cases for error no task name

--- a/henchman/test/plan/includeAndVarsAtTaskLevel.yaml
+++ b/henchman/test/plan/includeAndVarsAtTaskLevel.yaml
@@ -5,7 +5,8 @@ vars:
 tasks:
   - name: task1
     action: ls=al
-  - include: test/tasks/withIncludeAndVars.yaml
+  - name: "included tasks" 
+    include: test/tasks/withIncludeAndVars.yaml
     vars:
       foo: nope
       bar: baz
