--- a/henchman/test/tasks/withInclude.yaml
+++ b/henchman/test/tasks/withInclude.yaml
@@ -3,4 +3,5 @@ name: "Tasks With Includes"
 tasks:
   - name: "included_task1"
     shell: cmd=foo
-  - include: test/tasks/noInclude.yaml
+  - name: "included tasks" 
+    include: test/tasks/noInclude.yaml
