--- a/henchman/test/plan/includeWithSudoAtTaskLevel.yaml
+++ b/henchman/test/plan/includeWithSudoAtTaskLevel.yaml
@@ -3,4 +3,5 @@ name: "Sample plan"
 tasks:
   - name: task1
     action: cmd="ls -al"
-  - include: test/tasks/withSudo.yaml
+  - name: "included tasks" 
+    include: test/tasks/withSudo.yaml
