#87 Implemented retries at the task level.  Retry handling is done in plan.go

--- a/henchman/test/plan/localWithCopy.yaml
+++ b/henchman/test/plan/localWithCopy.yaml
@@ -5,3 +5,5 @@ hosts:
 tasks:
    - name: "Task 1"
      copy: src="henchman/test/plan/localTest.yaml" dest="fldr/tmp.yaml"
+     sudo: true
+     debug: true
