round 2 of fixes for ssh

--- a/henchman/test/plan/localWithCopy.yaml
+++ b/henchman/test/plan/localWithCopy.yaml
@@ -6,11 +6,17 @@ tasks:
    - name: "Task Copy File"
      copy: src="henchman/test/plan/localTest.yaml" dest="fldr/localTest.yaml"
      debug: true
+     sudo: true
    - name: "Task Copy Folder"
      copy: src="henchman/test/plan/" dest="fldr/plans"
      debug: true
+     sudo: true
    - name: "Task Copy Folder 2"
      copy: src="henchman/test/plan/invalid" dest="fldr/plans/invalids/ralids"
+     debug: true
+     sudo: true
+   - name: "Who am I"
+     shell: cmd="whoami"
      debug: true
    #- name: "Local task"
    #  copy: src="henchman/test/plan" dest="/Users/jordanlin/tmpFldr/plans"
