--- a/henchman/test/inventory/testInventory.yaml
+++ b/henchman/test/inventory/testInventory.yaml
@@ -1,9 +1,4 @@
 groups:
-  all:
-    hosts:
-      - 192.168.33.10
-      - 192.168.33.11
-      - 192.168.33.12
   test:
     hosts:
       - 192.168.33.10
@@ -13,6 +8,8 @@ groups:
   individual:
     hosts:
       - 192.168.33.10
+    vars:
+      testVar: hello
   second:
     hosts:
       - 192.168.33.11
