--- a/henchman/test/plan/templateTest.yaml
+++ b/henchman/test/plan/templateTest.yaml
@@ -9,9 +9,6 @@ tasks:
      shell: cmd="rm -rf test"
    - name: "Remove old files"
      shell: cmd="rm -rf copies"
-   - name: "Task Template File"
-     template: src="henchman/test/templates/temp1" dest="test/temp1.yaml"
-     debug: true
    - name: "Task Template Folder"
      template: src="henchman/test/templates" dest="test/templates" ext="zip"
      debug: true
@@ -19,6 +16,6 @@ tasks:
      template: src="henchman/test/templates" dest="test/templates" ext="zip"
      debug: true
    - name: "Copy One"
-     copy: src="henchman/test/templates/" dest="copies/copes/"
+     copy: src="henchman/test/templates/" dest="copies/copes"
    - name: "Copy Two"
-     copy: src="henchman/test/templates/" dest="copies/copes/"
+     copy: src="henchman/test/templates/" dest="copies/copes"
