#21 finished first pass.  With items is now supported. Using registers to store variables is still in progress and using pongo2 to render a list {{somelist}} is still in progress

--- a/henchman/test/plan/withItemsAtTaskLevelWithHenchmanitem.yaml
+++ b/henchman/test/plan/withItemsAtTaskLevelWithHenchmanitem.yaml
@@ -6,7 +6,7 @@ vars:
 hosts:
    - localhost
 tasks:
-   - name: "Task 1 henchman_item"
+   - name: "Task 1 {{ item }}"
      shell: cmd=echo params=henchman_item
      debug: true
      with_items:
