--- a/henchman/test/plan/curlTest.yaml
+++ b/henchman/test/plan/curlTest.yaml
@@ -19,5 +19,5 @@ tasks:
     debug: true
     when: 'vars.current_hostname == "192.168.33.11"' 
   - name: "Test Shell"
-    shell: cmd="echo {{ vars.service }}"
+    shell: cmd="echo {{ vars.current_hostname }}"
     debug: true
