#118 with_items now can use {{ ... }} notation to receive lists as a paramter.  The actual code never runs whatever is in the parameters into pongo2 engine but parses the string and refers it to varsMap to get the right values

--- a/henchman/test/plan/withItemsTest.yaml
+++ b/henchman/test/plan/withItemsTest.yaml
@@ -11,6 +11,7 @@ vars:
     - { name: 'objOne', value: 'oOne' }
     - { name: 'objTwo', value: 'oTwo' }
     - { name: 'objThree', value: 'oThree' }
+  bad_array: "hello"
 tasks:
   - name: "Task {{ item }}"
     shell: cmd="echo {{ item }}"
@@ -29,6 +30,9 @@ tasks:
   - name: "Task {{ item }}"
     shell: cmd="echo {{ item }}"
     with_items: "{{vars.somelist}}"
-  #- name: "Task {{ item }}"
-  #  shell: cmd="echo {{ item }}"
-  #  with_items: "{{vars.obj_array}}"
+  - name: "Task {{ item.name }}"
+    shell: cmd="echo {{ item.value }}"
+    with_items: "{{vars.obj_array}}"
+  - name: "Task {{ item }}"
+    shell: cmd="echo {{ item }}"
+    with_items: "{{vars.bad_array}}"
