updated test inventory

--- a/henchman/test/inventory/testInventory.yaml
+++ b/henchman/test/inventory/testInventory.yaml
@@ -11,10 +11,11 @@ groups:
       - 192.168.33.10
     vars:
       testVar: hello
-      henchman_username: "vagrant"
   second:
     hosts:
       - 192.168.33.11
   third:
     hosts:
       - 192.168.33.12
+global_vars:
+  henchman_username: "vagrant"
