--- a/henchman/test/plan/withItemsTest.yaml
+++ b/henchman/test/plan/withItemsTest.yaml
@@ -12,6 +12,8 @@ vars:
     - { name: 'objTwo', value: 'oTwo' }
     - { name: 'objThree', value: 'oThree' }
   bad_array: "hello"
+  val1: "val1"
+  val2: "val2"
 tasks:
   - name: "Task {{ item }}"
     shell: cmd="echo {{ item }}"
@@ -19,20 +21,39 @@ tasks:
       - itemOne
       - itemTwo
       - itemThree
+
   - name: "Middle Task"
     shell: cmd="echo success"
+
   - name: "Task {{ item.name }}"
     shell: cmd="echo {{ item.value }}"
     with_items:
       - { name: 'itemOne', value: 'one' }
       - { name: 'itemTwo', value: 'two' }
       - { name: 'itemThree', value: 'three' }
+
   - name: "Task {{ item }}"
     shell: cmd="echo {{ item }}"
     with_items: "{{vars.somelist}}"
+
   - name: "Task {{ item.name }}"
     shell: cmd="echo {{ item.value }}"
     with_items: "{{vars.obj_array}}"
-  - name: "Task {{ item }}"
+
+  - name: "Val render task {{ item }}"
     shell: cmd="echo {{ item }}"
-    with_items: "{{vars.bad_array}}"
+    with_items:
+      - "{{ vars.val1 }}"
+      - "{{ vars.val2 }}"
+
+#  Verified this test case works for the default case in task.ProcessWithItems
+#  - name: "Bad Task {{ item }}"
+#    shell: cmd="echo {{ item }}"
+#    with_items: 
+#      - "hello"
+#      - 1.0
+#
+#  Verified this test case works
+#  - name: "Bad Task {{ item }}"
+#    shell: cmd="echo {{ item }}"
+#    with_items: "{{vars.bad_array}}"
