--- a/henchman/test/plan/curlTest.yaml
+++ b/henchman/test/plan/curlTest.yaml
@@ -18,6 +18,7 @@ tasks:
     shell: cmd="echo (*&@JJ)U"
     debug: true
     ignore_errors: true
+    retry: 2
   - name: "Test Shell"
     shell: cmd="echo {{ vars.current_hostname }}"
     debug: true
