#138 WithItems field is evaluated in preprocessor.go by a plan func called EvaluateWithItems.  EvaluateWithItems generates a new task list.  task.ProcessWithItems generates the newTask list for EvaluateWithItems

--- a/henchman/test/plan/curlTest.yaml
+++ b/henchman/test/plan/curlTest.yaml
@@ -19,6 +19,6 @@ tasks:
     debug: true
     ignore_errors: true
     retry: 2
-  - name: "Test Shell"
+  - name: "Test Shell {{ vars.current_hostname}}"
     shell: cmd="echo {{ vars.current_hostname }}"
     debug: true
