--- a/circle.yml
+++ b/circle.yml
@@ -12,6 +12,8 @@ general:
 dependencies:
   pre:
     - go get github.com/tools/godep
+    - go get github.com/stretchr/testify/assert
+    - go get github.com/stretchr/testify/require
   override:
     - mkdir -p "$GOPATH/src/$IMPORT_PATH"
     - rsync -azC --delete ./ "$GOPATH/src/$IMPORT_PATH/"
